--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,8 @@ react {
     /* Bundling */
     //   A list containing the node command and its flags. Default is just 'node'.
     // nodeExecutableAndArgs = ["node"]
-    //
+    nodeExecutableAndArgs = ["/opt/homebrew/opt/node@20/bin/node"]
+
     //   The command to run when bundling. By default is 'bundle'
     // bundleCommand = "ram-bundle"
     //
@@ -109,7 +110,8 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation("com.facebook.react:react-android")
+    implementation(project(":reactNativeAndroid"))
+//    implementation("com.facebook.react:react-android")
 
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
